# visgraph

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml  semver-checks.yml
benches/: common.rs  graph_to_svg.rs
examples/: bipartite_layout.rs  circular_layout.rs  complete_graph_with_circular_layout.rs  custom_colors.rs  custom_labels.rs  default_settings.rs  force_directed_layout.rs  force_directed_layout_big.rs  force_directed_layout_two.rs  graph_to_svg.rs  graph_with_circular_layout.rs  graph_with_custom_colors.rs  graph_with_custom_labels.rs  graph_with_default_settings.rs  graph_with_force_directed_layout.rs  graph_with_force_directed_layout_two.rs  graph_with_hierarchical_layout.rs  graph_with_position_map.rs  hierarchical_layout.rs  position_map.rs  square_graph_with_position_map.rs
src/: errors.rs  graph_to_img.rs  graph_to_svg.rs  layout.rs  lib.rs  main.rs  settings.rs  svg_to_img.rs
src/layout/: bipartite.rs  force_directed.rs  hierarchical.rs  mod.rs
