[package]
name = "visgraph"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"

description = "A library to visualize graphs as images in Rust."
documentation = "https://docs.rs/visgraph"
repository = "https://github.com/raoulluque/visgraph"

rust-version = "1.68"
edition = "2021"

include = [
    "src/**",
    "assets/DejaVuSans.ttf",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "visgraph"

[dependencies]
petgraph = { version= "0.8.3", features = [] }
resvg = { version = "0.45.1", features = ["text", "system-fonts"], optional = true}
thiserror = "2.0.17"

[profile.dev.package.resvg]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
image = "0.25.4"

[features]
default = ["svg_to_img"]
svg_to_img = ["resvg"]

[[bench]]
name = "graph_to_svg"
harness = false
