[package]
name = "visgraph"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"

description = "A library to visualize graphs as images in Rust."
documentation = "https://docs.rs/visgraph"
repository = "https://github.com/raoulluque/visgraph"

rust-version = "1.68"
edition = "2021"

include = [
    "src/**",
    "assets/DejaVuSans.ttf",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "visgraph"

[dependencies]
fastrand = "2.3.0"
fixedbitset = "0.5.7"
petgraph = { version= "0.8.3", features = [] }
resvg = { version = "0.45.1", features = ["text", "system-fonts"], optional = true}
ryu = "1.0.20"
thiserror = "2.0.17"

[profile.dev.package.resvg]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
image = "0.25.4"

[features]
default = []
img = ["resvg"]

[[bench]]
name = "graph_to_svg"
harness = false

[[example]]
name = "circular_layout"
path = "examples/circular_layout.rs"
required-features = ["img"]

[[example]]
name = "custom_colors"
path = "examples/custom_colors.rs"
required-features = ["img"]

[[example]]
name = "custom_labels"
path = "examples/custom_labels.rs"
required-features = ["img"]

[[example]]
name = "default_settings"
path = "examples/default_settings.rs"
required-features = ["img"]

[[example]]
name = "force_directed_layout_two"
path = "examples/force_directed_layout_two.rs"
required-features = ["img"]

[[example]]
name = "force_directed_layout"
path = "examples/force_directed_layout.rs"
required-features = ["img"]

[[example]]
name = "graph_to_svg"
path = "examples/graph_to_svg.rs"

[[example]]
name = "hierarchical_layout"
path = "examples/hierarchical_layout.rs"
required-features = ["img"]

[[example]]
name = "position_map"
path = "examples/position_map.rs"
required-features = ["img"]

[lints.rust]
# Taken from bevy, subject to change
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Taken from bevy, subject to change
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
